# data-science-health-economics-hospital-supply

./: .gitignore  AGENTS.md  README.md  analysis__epurun.py  analysis__hana_ent.py  complete_pipeline_example.py  embed__epurun.py  embed__hana_ent.py  initial_training_example.py  lavar_best.pth  lavar_supply_best.pth  main.ipynb  main__epurun.py  main__hana_ent.py  pyproject.toml  requirements.txt
core/: __init__.py  config.py  data_models.py  exceptions.py  fm_models.py
mlflow_timeseries_clustering/: README.md  __init__.py  requirements.txt
mlflow_timeseries_clustering/clustering/: __init__.py  adaptive_clustering_engine.py  knn_fallback.py  knn_fallback_reporter.py  performance_reporter.py
mlflow_timeseries_clustering/core/: __init__.py  config.py  data_models.py  exceptions.py
mlflow_timeseries_clustering/docs/: api_documentation.md  configuration_guide.md  troubleshooting_guide.md
mlflow_timeseries_clustering/examples/: __init__.py  adaptive_retraining_example.py  batch_processing_example.py  complete_pipeline_example.py  retraining_configuration_example.py
mlflow_timeseries_clustering/mlflow_integration/: __init__.py  artifact_manager.py  experiment_manager.py  logging_utils.py
mlflow_timeseries_clustering/models/: __init__.py  cluster_specific_model_manager.py
notebook/: dynamic_factor_model.ipynb  dynamic_factor_model_weekly.ipynb  lavar_best.pth  lavar_supply_best.pth  nonlinear_latent_autoencoder_var_daily.ipynb  patient_clustering_model.ipynb
pipeline/: backtesting_experiment.py  base_manager.py  dfm_pipeline.py
utils/: __init__.py
(+71 files in other folders)
