[project]
name = "ds-202501-health-econ-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "lightgbm>=4.6.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
